log
Fri 21 Mar 2025 02:19:16 PM UTC: 
 exercises.c | 30 +++++++++++++++++++-----------
 1 file changed, 19 insertions(+), 11 deletions(-)
 tests:  1|4
total_score: 10/70
3f6cb15
Fri 21 Mar 2025 02:20:36 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
840ba08
Fri 21 Mar 2025 02:20:56 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
e0cc221
Fri 21 Mar 2025 02:26:43 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|3
total_score: 20/70
0de43e3
Fri 21 Mar 2025 02:36:50 PM UTC: 
 exercises.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  2|3
total_score: 20/70
9ce94e2
Fri 21 Mar 2025 02:38:36 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘eliminaElementos’:
exercises.c:84:12: error: unused variable ‘dato’ [-Werror=unused-variable]
   84 |       int *dato = (int*) next(L);
      |            ^~~~
cc1: all warnings being treated as errors
Compilation failed
a693a56
Fri 21 Mar 2025 02:38:44 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|3
total_score: 20/70
cbd8f4f
Fri 21 Mar 2025 02:39:00 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘eliminaElementos’:
exercises.c:84:13: error: assignment to ‘int’ from ‘int *’ makes integer from pointer without a cast [-Werror=int-conversion]
   84 |       *dato = (int*) next(L);
      |             ^
cc1: all warnings being treated as errors
Compilation failed
3f31680
Fri 21 Mar 2025 02:40:23 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|2
total_score: 40/70
23948f3
Fri 21 Mar 2025 03:06:59 PM UTC: 
 exercises.c | 13 ++++++++++++-
 1 file changed, 12 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘copia_pila’:
exercises.c:103:16: error: initialization of ‘int’ from ‘void *’ makes integer from pointer without a cast [-Werror=int-conversion]
  103 |     int elem = top(Paux);
      |                ^~~
exercises.c:104:14: error: passing argument 2 of ‘push’ makes pointer from integer without a cast [-Werror=int-conversion]
  104 |     push(P2, elem);
      |              ^~~~
      |              |
      |              int
In file included from exercises.c:2:
stack.h:11:31: note: expected ‘void *’ but argument is of type ‘int’
   11 | void push(Stack *stack, void *data) { pushFront(stack, data); }
      |                         ~~~~~~^~~~
cc1: all warnings being treated as errors
Compilation failed
6f8aa04
Fri 21 Mar 2025 03:08:21 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘copia_pila’:
exercises.c:103:16: error: initialization of ‘int’ from ‘int *’ makes integer from pointer without a cast [-Werror=int-conversion]
  103 |     int elem = (int *) top(Paux);
      |                ^
exercises.c:104:14: error: passing argument 2 of ‘push’ makes pointer from integer without a cast [-Werror=int-conversion]
  104 |     push(P2, elem);
      |              ^~~~
      |              |
      |              int
In file included from exercises.c:2:
stack.h:11:31: note: expected ‘void *’ but argument is of type ‘int’
   11 | void push(Stack *stack, void *data) { pushFront(stack, data); }
      |                         ~~~~~~^~~~
cc1: all warnings being treated as errors
Compilation failed
4fce511
